--- a/elecdb-ui/src/styles/main.styl
+++ b/elecdb-ui/src/styles/main.styl
@@ -1,1 +1,24 @@
 @import 'style.css';
+
+#mui-overlay {
+  background-color: rgba(0, 0, 0, 0.5) !important;
+  position: absolute !important;
+  width: 100%;
+  height: 100%;
+  display: table;
+}
+
+.fa-10x {
+  font-size 10em !important
+}
+
+.loading {
+  display: table-cell;
+  vertical-align: middle;
+
+  i {
+    color: whitesmoke;
+    margin: auto;
+    width: 100%;
+  }
+}
