--- a/elecdb-ui/src/js/components/var-grid/VGrid.styl
+++ b/elecdb-ui/src/js/components/var-grid/VGrid.styl
@@ -1,6 +1,5 @@
 
 .vgrid-container {
-  //margin-top: 60px;
   overflow-x: auto;
   white-space: nowrap;
 
@@ -67,3 +66,9 @@
   margin-right: 2px !important;
 }
 
+.details {
+  cursor: pointer;
+  &:hover {
+    color: rgb(17, 148, 246);
+  }
+}
